# coin-detector

./: .pre-commit-config.yaml  LICENSE  README.md  coins.py  pyproject.toml  setup.cfg
