[tool.poetry]
name = "coins"
version = "0.1.0"
description = ""
authors = ["Khasbilegt.TS <khasbilegt.ts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.0.3"
pandas = "^1.0.3"
opencv-python = "^4.2.0"
matplotlib = "^3.2.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
flake8 = "^3.8.1"
black = "^19.10b0"
bpython = "^0.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 100
target_version = ['py38']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''